# StreamDeck-CPPSDK

./: CMakeLists.txt  README.md  StreamDeckSDK.cmake.in
.github/workflows/: ci.yml  release.yml
StreamDeckSDK/: CMakeLists.txt  EPLJSONUtils.h  ESDAction.cpp  ESDAction.h  ESDActionWithExternalState.h  ESDBasePlugin.h  ESDConnectionManager.cpp  ESDConnectionManager.h  ESDFilesystem.cpp  ESDFilesystem.h  ESDFormat.h  ESDLocalizer.cpp  ESDLogger.cpp  ESDLogger.h  ESDLoggerWindows.cpp  ESDMain.cpp  ESDPlugin.cpp  ESDPlugin.h  ESDSDKDefines.h  ESDUtilities.cpp  ESDUtilities.h  ESDUtilitiesLinux.cpp  ESDUtilitiesMac.cpp  ESDUtilitiesPOSIX.cpp  ESDUtilitiesStubs.cpp  ESDUtilitiesWindows.cpp
example/: CMakeLists.txt  MyAction.h  MyPlugin.h  StreamDeckSDK.cmake  main.cpp  manifest.json
tests/: CMakeLists.txt  ESDLoggerTest.cpp  ESDUtilities_GetFileNameTest.cpp  ESDUtilities_GetParentDirectoryPathTest.cpp  ESDUtilities_GetPluginExecutablePathTest.cpp  ESDUtilititesPathTest.cpp  IncludeTest.cpp  Test.h  main.cpp
