add_library(
  ESDUtilities_GetParentDirectoryPathTestImpl
  ESDUtilities_GetParentDirectoryPathTest.cpp
)
set_target_properties(
  ESDUtilities_GetParentDirectoryPathTestImpl
  PROPERTIES
  CXX_STANDARD 17
  CXX_STANDARD_REQUIRED ON
  CXX_EXTENSIONS OFF
)
target_link_libraries(ESDUtilities_GetParentDirectoryPathTestImpl PRIVATE StreamDeckSDK)

add_executable(
  ESDUtilities_GetParentDirectoryPathTest
  main.cpp
)
target_link_libraries(ESDUtilities_GetParentDirectoryPathTest ESDUtilities_GetParentDirectoryPathTestImpl)

add_test(NAME ESDUtilities_GetParentDirectoryPath COMMAND ESDUtilities_GetParentDirectoryPathTest)
